--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -43,6 +43,9 @@
       <h4>My blog</h4>
       <ul class="nav nav-pills nav-stacked">
         <li class="active"><a href="{% url 'home'%}">Home</a></li>
+        {% if user.is_authenticated %}
+            <li><a href="{% url 'post_new' %}">Add Post</a></li>
+        {% endif %}
         <!--- <li><a href="#section2">Friends</a></li> -->
         <!-- a href="#section3">Photos</a></li> -->
       </ul><br>
